[package]
description = "Manage environment variables"
name = "menva"
version = "1.1.0"
repository = "https://github.com/lucas-montes/menva"
authors = ["Lucas Montes <lluc23@hotmail.com>"]
license.workspace = true
edition.workspace = true

[workspace.package]
edition = "2021"
license = "Apache-2.0"

[workspace]
members = ["menva-macros"]

[dependencies]
menva-macros = { path = "./menva-macros", version = "0.1.0" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

